hard revert repo without tokens

--- a/src/style.css
+++ b/src/style.css
@@ -1,32 +1,27 @@
-/* good default vite styles */
 :root {
 	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
 	font-weight: 400;
 	color-scheme: dark;
-	color: #dedede;
-	background-color: #242424;
 	font-synthesis: none;
+	color: hsla(0, 0%, 100%, .7);
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
 }
 
-/* box sizing rules */
 *,
 *::before,
 *::after {
 	box-sizing: border-box
 }
 
-/* remove default padding */
 ul,
 ol {
 	padding: 0;
 }
 
-/* remove default margin */
 body,
 h1,
 h2,
@@ -47,31 +42,52 @@ dd {
 	margin: 0;
 }
 
-/* good default vite styles */
-a {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	color: white;
 	font-weight: 500;
-	color: #646cff;
-	text-decoration: inherit;
-}
-a:hover {
-	color: #535bf2;
 }
 
-/* set core body defaults */
+a {
+	font-weight: 500;
+	text-decoration: inherit;
+	cursor: pointer;
+}
+
+button {
+	cursor: pointer;
+}
+
+*:disabled {
+	opacity: .5;
+}
+
 body {
-	min-height: 100vh;
+	min-height: 100svh;
 	display: flex;
 	flex-direction: column;
 }
 
-/* remove list styles on ul, ol elements with a class attribute */
 ul,
 ol {
 	list-style: none;
 }
 
-/* make images easier to work with */
 img {
 	max-width: 100%;
 	display: block;
+}
+
+.v-enter-active,
+.v-leave-active {
+	transition: opacity 0.5s ease;
+}
+
+.v-enter-from,
+.v-leave-to {
+	opacity: 0;
 }
