--- a/src/style.css
+++ b/src/style.css
@@ -56,6 +56,7 @@ a {
 	font-weight: 500;
 	text-decoration: inherit;
 	cursor: pointer;
+	color: hsl(205, 97%, 74%);
 }
 
 button {
@@ -80,6 +81,12 @@ ol {
 img {
 	max-width: 100%;
 	display: block;
+}
+
+code {
+	background-color: hsla(0, 0%, 100%, .1);
+	padding: .5rem;
+	border-radius: .5rem;
 }
 
 .v-enter-active,
